--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <title>Todo List</title>
 </head>
 
-<body>
+<body class="bg-gray-100">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
